<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:id="@+id/scrollView"
    android:background="@color/grisFondo">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grisFondo"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/dr_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textColor="@color/negro"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical"
            android:background="@color/blanco"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/blanco">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@color/blanco"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/dr_account"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/email"
                    android:textColor="@color/gris"
                    android:layout_gravity="center"
                    android:editable="false"
                    android:background="#00000000"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/blanco">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@color/blanco"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/dr_pass"/>

                <EditText
                    android:id="@+id/contrasena"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@string/contraseña"
                    android:textColor="@color/gris"
                    android:layout_gravity="center"
                    android:editable="false"
                    android:background="#00000000"/>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/acceder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_gravity="center"
            android:text="@string/acceder"
            android:layout_marginBottom="33dp"
            android:background="@drawable/boton_login"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            android:onClick="acceder"/>

        <TextView
            android:id="@+id/recuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperar"
            android:textColor="@color/azulFondo"
            android:textSize="16sp"
            android:textIsSelectable="false"
            android:layout_marginTop="-25dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/registrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_gravity="center"
            android:text="@string/registrar"
            android:layout_marginBottom="33dp"
            android:background="@drawable/boton_registro"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            android:onClick="registrar"/>

    </LinearLayout>
</ScrollView>